--- a/view/passForget/passOlvidada.phtml
+++ b/view/passForget/passOlvidada.phtml
@@ -28,7 +28,7 @@ global $login_url;
 
                 <div style="padding-top:30px" class="panel-body">
 
-                    <form class="form-pass" action="<?= $URL_PATH ?>/restablecerPass" onsubmit="return passOlvidada(this)" method="POST" autocomplete="off">
+                    <form class="form-pass formArreglo" action="<?= $URL_PATH ?>/restablecerPass" onsubmit="return passOlvidada(this)" method="POST" autocomplete="off">
 
                         <div style="margin-bottom: 20px" >
                                 <b>INTRODUCE TU EMAIL:&nbsp;&nbsp;<span id="checkemail"></span></b>
