--- a/view/cabeceras/headerView.phtml
+++ b/view/cabeceras/headerView.phtml
@@ -66,13 +66,14 @@ global $login_url;
     <!-- Alberto -->
     <script src="<?= $URL_PATH ?>/js/validacionPreFormulario.js"></script>
     <script src="<?= $URL_PATH ?>/js/modalCambioPass.js"></script>
-    <!-- Carlos -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUeBEZ-J7vCRpYjRz4skVkH9VRfXSMplA&callback=initMap">
+   <!-- Carlos -->
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUeBEZ-J7vCRpYjRz4skVkH9VRfXSMplA&callback=initMap">
     </script>
     <script src="<?= $URL_PATH ?>/js/map.js"></script>
     <script src="<?= $URL_PATH ?>/js/hechizos.js"></script>
     <script src="<?= $URL_PATH ?>/js/borrarPerfil.js"></script>
     <script src="<?= $URL_PATH ?>/js/borrarComent.js"></script>
+    <script src="<?= $URL_PATH ?>/js/validacionesPerfil.js"></script>
     <!-- Include trumbowyg editor -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.20.0/ui/trumbowyg.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.20.0/trumbowyg.js"></script>
